Bug 237366 - [RTL] Image alt text has incorrect bidi reordering
Summary: [RTL] Image alt text has incorrect bidi reordering
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-03-02 07:38 PST by zalan
Modified: 2022-03-02 09:11 PST (History)
11 users (show)

See Also:


Attachments
Patch (4.13 KB, patch)
2022-03-02 07:50 PST, zalan
no flags Details | Formatted Diff | Diff
[fast-cq]Patch (4.14 KB, patch)
2022-03-02 09:05 PST, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2022-03-02 07:38:08 PST
ssia
Comment 1 Radar WebKit Bug Importer 2022-03-02 07:38:30 PST
<rdar://problem/89687229>
Comment 2 zalan 2022-03-02 07:50:13 PST
Created attachment 453611 [details]
Patch
Comment 3 zalan 2022-03-02 09:05:37 PST
Created attachment 453620 [details]
[fast-cq]Patch
Comment 4 EWS 2022-03-02 09:11:02 PST
Committed r290734 (247981@main): <https://commits.webkit.org/247981@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 453620 [details].