[RTL] Image alt text has incorrect bidi reordering https://bugs.webkit.org/show_bug.cgi?id=237366 <rdar://problem/89687229>

Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/images/alt-text-with-right-to-left-inline-direction-reordering.html

* rendering/RenderImage.cpp:
(WebCore::RenderImage::paintReplaced): Enable bidi reordering.

LayoutTests:

* fast/images/alt-text-with-right-to-left-inline-direction-reordering-expected-mismatch.html: Added.
* fast/images/alt-text-with-right-to-left-inline-direction-reordering.html: Added.



Canonical link: https://commits.webkit.org/247981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290734 268f45cc-cd09-0410-ab3c-d52691b4dbfc